--- a/fp-naivetolambda/examples/pom.xml
+++ b/fp-naivetolambda/examples/pom.xml
@@ -36,6 +36,7 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
             <type>jar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
