--- a/java-junit5/examples/ju5-gradle/build.gradle
+++ b/java-junit5/examples/ju5-gradle/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.0-M3")
     testCompile("org.junit.vintage:junit-vintage-engine:4.12.0-M3")
     testCompile 'org.assertj:assertj-core:3.6.2'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    compile group: 'org.mockito', name: 'mockito-core', version: '2.7.13'
+
+
 }
